Header has been completed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 d="M12.239 3.848c-.034-.084-.125-.113-.186-.089L3.822 6.983a.11.11 0 00-.067.073.152.152 0 00.104.181l3.356 1.06a.75.75 0 01.489.489l1.06 3.355c.013.044.047.08.09.098.077.032.142-.007.163-.06l3.225-8.23a.135.135 0 00-.003-.1zm-.734-1.486a1.65 1.65 0 012.133 2.133l-3.224 8.231a1.62 1.62 0 01-2.127.902 1.66 1.66 0 01-.954-1.035L6.391 9.61l-2.984-.943a1.652 1.652 0 01-1.09-2.04 1.61 1.61 0 01.957-1.04l8.232-3.225z">
                             </path>
                         </svg>
-                        <span id="top-nav-place-span">Россия, Омск</span>
+                        <span>Россия, Омск</span>
                     </button>
                     <ul class="top-nav-elem">
                         <li><a href="#">Магазины</a></li>
@@ -36,13 +36,13 @@
                         <li><a href="#">Бонусная программа</a></li>
                         <li><a href="#">Партнерская программа</a></li>
                     </ul>
-                    <div class="top-nav-refs-right-align">
-                        <a href="#">Вакансии</a>
-                        <ul class="top-nav-elem">
-                            <li class="last-top-nav-elems"><a href="#">8 (800) 444-9-444</a></li>
-                            <li class="last-top-nav-elems"><a href="#">Обратная связь</a></li>
-                        </ul>
-                    </div>
+                </div>
+                <div class="top-nav-refs-right-align">
+                    <a href="#">Вакансии</a>
+                    <ul class="top-nav-elem">
+                        <li id="top-nav-elem-tel" class="last-top-nav-elems"><a href="tel:84954248444">8 (495) 424-84-44</a></li>
+                        <li class="last-top-nav-elems"><a href="#">Обратная связь</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
                     <div class="sticky-header-catolog">
                         <div class="header-catalog-div">
                             <button>
-                                <svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"
+                                <svg width="24" height="24" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"
                                     class="catalog-button-image">
                                     <path fill-rule="evenodd" clip-rule="evenodd"
                                         d="M6.667 3.333C5.747 3.333 5 4.08 5 5v10.834c-.92 0-1.667-.746-1.667-1.666V5a3.333 3.333 0 013.334-3.333h7.5c.92 0 1.667.746 1.667 1.666V5h-1.667V3.333h-7.5z">
@@ -122,7 +122,7 @@
                             <button class="header-profile-controls">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
                                     class="header-profile-icon">
-                                    <path
+                                    <path 
                                         d="M13.717 3.437a6.188 6.188 0 013.446-.327 6.065 6.065 0 013.065 1.577 5.75 5.75 0 011.655 2.978 5.63 5.63 0 01-.345 3.375 5.85 5.85 0 01-2.22 2.603A6.145 6.145 0 0116 14.61h-.001a6.11 6.11 0 01-4.226-1.688A5.718 5.718 0 0110 8.807v-.002c0-1.157.357-2.285 1.022-3.24a5.962 5.962 0 012.695-2.128zm6.208 4.634a3.75 3.75 0 00-1.082-1.943 4.065 4.065 0 00-2.055-1.053 4.2 4.2 0 00-2.332.22 3.963 3.963 0 00-1.792 1.412A3.673 3.673 0 0012 8.805c.001.996.413 1.96 1.16 2.676.413.398.912.702 1.457.894.438.154.905.235 1.383.236.8 0 1.579-.228 2.238-.651.178-.115.345-.242.5-.38.417-.373.746-.827.963-1.331a3.622 3.622 0 00.224-2.178zm3.384 11.149a14.206 14.206 0 00-14.618 0A7.603 7.603 0 005 25.74V27c0 1 1 2 2 2h18c1 0 2-1 2-2v-1.26a7.603 7.603 0 00-3.691-6.52zM9.72 20.935a12.206 12.206 0 0112.56 0A5.603 5.603 0 0125 25.739v1.262H7v-1.262a5.603 5.603 0 012.72-4.804z">
                                     </path>
                                 </svg>
@@ -132,7 +132,7 @@
                         <button class="header-controls-orders">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
                                 class="header-orders-icon">
-                                <path
+                                <path 
                                     d="M17.392 2.703a2.925 2.925 0 00-2.786 0L3.56 8.687a.925.925 0 00-.485.813v11.809c0 1.073.588 2.06 1.532 2.572l10.953 5.932a.925.925 0 00.88 0l10.953-5.932a2.925 2.925 0 001.532-2.572V9.5a.925.925 0 00-.484-.813L17.392 2.703zm-1.905 1.626c.32-.173.705-.173 1.024 0l9.53 5.162-4.04 2.14L11.95 6.247l3.538-1.917zm-9.53 5.162l4.045-2.19 10.03 5.375L16 14.813 5.958 9.491zM4.925 21.31V11.037l10.15 5.38v11.03l-9.587-5.193a1.075 1.075 0 01-.563-.945zm12 6.138v-11.03l10.15-5.38V21.31c0 .394-.216.757-.563.945l-9.587 5.193z">
                                 </path>
                             </svg>
@@ -141,7 +141,7 @@
                         <button class="header-controls-bookmarks">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
                                 class="header-bookmarks-icon">
-                                <path
+                                <path 
                                     d="M8 5a1 1 0 00-1 1v20.382l8.553-4.276a1 1 0 01.894 0L25 26.382V6a1 1 0 00-1-1H8zM5 6a3 3 0 013-3h16a3 3 0 013 3v22a1 1 0 01-1.447.894L16 24.118l-9.553 4.776A1 1 0 015 28V6z">
                                 </path>
                             </svg>
@@ -150,7 +150,7 @@
                         <button class="header-controls-basket">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
                                 class="header-basket-icon">
-                                <path
+                                <path 
                                     d="M3 1.999a1 1 0 000 2h2v19a1 1 0 001.053.998l17.523-.922a3 3 0 002.753-2.268L29.97 6.241A1 1 0 0029 5H7V3a1 1 0 00-1-1H3zm4 12v-7h20.72l-1.75 7H7zm0 2h18.47l-1.081 4.323a1 1 0 01-.918.756L7 21.945v-5.946zm2 12a2 2 0 11-4 0 2 2 0 014 0zm10 2a2 2 0 100-4 2 2 0 000 4z">
                                 </path>
                             </svg>
