--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 d="M12.239 3.848c-.034-.084-.125-.113-.186-.089L3.822 6.983a.11.11 0 00-.067.073.152.152 0 00.104.181l3.356 1.06a.75.75 0 01.489.489l1.06 3.355c.013.044.047.08.09.098.077.032.142-.007.163-.06l3.225-8.23a.135.135 0 00-.003-.1zm-.734-1.486a1.65 1.65 0 012.133 2.133l-3.224 8.231a1.62 1.62 0 01-2.127.902 1.66 1.66 0 01-.954-1.035L6.391 9.61l-2.984-.943a1.652 1.652 0 01-1.09-2.04 1.61 1.61 0 01.957-1.04l8.232-3.225z">
                             </path>
                         </svg>
-                        <span>Россия, Омск</span>
+                        <span id="top-nav-place-span">Россия, Омск</span>
                     </button>
                     <ul class="top-nav-elem">
                         <li><a href="#">Магазины</a></li>
