Adding nav panel and upgrade some code in top-nav and header

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400..600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -40,7 +38,8 @@
                 <div class="top-nav-refs-right-align">
                     <a href="#">Вакансии</a>
                     <ul class="top-nav-elem">
-                        <li id="top-nav-elem-tel" class="last-top-nav-elems"><a href="tel:84954248444">8 (495) 424-84-44</a></li>
+                        <li id="top-nav-elem-tel" class="last-top-nav-elems"><a href="tel:84954248444">8 (495)
+                                424-84-44</a></li>
                         <li class="last-top-nav-elems"><a href="#">Обратная связь</a></li>
                     </ul>
                 </div>
@@ -122,7 +121,7 @@
                             <button class="header-profile-controls">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
                                     class="header-profile-icon">
-                                    <path 
+                                    <path
                                         d="M13.717 3.437a6.188 6.188 0 013.446-.327 6.065 6.065 0 013.065 1.577 5.75 5.75 0 011.655 2.978 5.63 5.63 0 01-.345 3.375 5.85 5.85 0 01-2.22 2.603A6.145 6.145 0 0116 14.61h-.001a6.11 6.11 0 01-4.226-1.688A5.718 5.718 0 0110 8.807v-.002c0-1.157.357-2.285 1.022-3.24a5.962 5.962 0 012.695-2.128zm6.208 4.634a3.75 3.75 0 00-1.082-1.943 4.065 4.065 0 00-2.055-1.053 4.2 4.2 0 00-2.332.22 3.963 3.963 0 00-1.792 1.412A3.673 3.673 0 0012 8.805c.001.996.413 1.96 1.16 2.676.413.398.912.702 1.457.894.438.154.905.235 1.383.236.8 0 1.579-.228 2.238-.651.178-.115.345-.242.5-.38.417-.373.746-.827.963-1.331a3.622 3.622 0 00.224-2.178zm3.384 11.149a14.206 14.206 0 00-14.618 0A7.603 7.603 0 005 25.74V27c0 1 1 2 2 2h18c1 0 2-1 2-2v-1.26a7.603 7.603 0 00-3.691-6.52zM9.72 20.935a12.206 12.206 0 0112.56 0A5.603 5.603 0 0125 25.739v1.262H7v-1.262a5.603 5.603 0 012.72-4.804z">
                                     </path>
                                 </svg>
@@ -132,7 +131,7 @@
                         <button class="header-controls-orders">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
                                 class="header-orders-icon">
-                                <path 
+                                <path
                                     d="M17.392 2.703a2.925 2.925 0 00-2.786 0L3.56 8.687a.925.925 0 00-.485.813v11.809c0 1.073.588 2.06 1.532 2.572l10.953 5.932a.925.925 0 00.88 0l10.953-5.932a2.925 2.925 0 001.532-2.572V9.5a.925.925 0 00-.484-.813L17.392 2.703zm-1.905 1.626c.32-.173.705-.173 1.024 0l9.53 5.162-4.04 2.14L11.95 6.247l3.538-1.917zm-9.53 5.162l4.045-2.19 10.03 5.375L16 14.813 5.958 9.491zM4.925 21.31V11.037l10.15 5.38v11.03l-9.587-5.193a1.075 1.075 0 01-.563-.945zm12 6.138v-11.03l10.15-5.38V21.31c0 .394-.216.757-.563.945l-9.587 5.193z">
                                 </path>
                             </svg>
@@ -141,7 +140,7 @@
                         <button class="header-controls-bookmarks">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
                                 class="header-bookmarks-icon">
-                                <path 
+                                <path
                                     d="M8 5a1 1 0 00-1 1v20.382l8.553-4.276a1 1 0 01.894 0L25 26.382V6a1 1 0 00-1-1H8zM5 6a3 3 0 013-3h16a3 3 0 013 3v22a1 1 0 01-1.447.894L16 24.118l-9.553 4.776A1 1 0 015 28V6z">
                                 </path>
                             </svg>
@@ -150,7 +149,7 @@
                         <button class="header-controls-basket">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
                                 class="header-basket-icon">
-                                <path 
+                                <path
                                     d="M3 1.999a1 1 0 000 2h2v19a1 1 0 001.053.998l17.523-.922a3 3 0 002.753-2.268L29.97 6.241A1 1 0 0029 5H7V3a1 1 0 00-1-1H3zm4 12v-7h20.72l-1.75 7H7zm0 2h18.47l-1.081 4.323a1 1 0 01-.918.756L7 21.945v-5.946zm2 12a2 2 0 11-4 0 2 2 0 014 0zm10 2a2 2 0 100-4 2 2 0 000 4z">
                                 </path>
                             </svg>
@@ -160,22 +159,24 @@
                 </div>
             </div>
         </header>
-        <!--
         <nav>
-            <div cladss="nav-panel-row">
-                <div class="nav-panel-row-elems">
-                    <ul>
-                        <li>Акции</li>
-                        <li>Распродажа</li>
-                        <li>Комиксы и манга</li>
-                        <li>Читай-школа</li>
-                        <li>Что еще почитать?</li>
-                        <li>Читай-журнал</li>
-                        <li>Подарочные сертификаты</li>
-                    </ul>
-                </div>
+            <div class="nav-panel-row">
+                <ul>
+                    <a href="#">Акции</a>
+                    <a href="#">Распродажа</a>
+                    <a href="#">Комиксы и манга</a>
+                    <a id="nav-panel-chitay-school" href="#">
+                        <img src="/Chitay-Gorod/resources/flower_chitay.png" alt="flower_chitay" width="20" height="20">Читай-школа</a>
+                    <a href="#">Что еще почитать?</a>
+                    <a href="#">Читай-журнал</a>
+                    <a id="nav-panel-sertificate-gifts" href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <path d="M12.448 7.166c.085-.16.215-.372.395-.568.18-.196.415-.382.711-.477.3-.097.643-.096 1.026.057.711.283 1.141.685 1.142 1.311 0 .294-.097.61-.261.946a7.623 7.623 0 01-.714 1.13c-.315.428-.635.671-.967.675-.336.002-.584-.24-.762-.516-.42-.659-.973-1.79-.57-2.558zM8.304 8.43c-.346.26-.618.617-.782 1.028-.576 1.439.517 2.116 1.86 2.333.357.057.729.05 1.019-.107a.865.865 0 00.363-.368 1.18 1.18 0 00.117-.58c-.022-.805-.312-1.642-.764-2.156-.227-.258-.508-.45-.83-.493-.327-.045-.663.066-.983.344zm10.528 1.593c-.439-.4-1.144-.553-1.72-.392-.755.21-1.255 1.448-1.34 2.183-.033.288.008.78.257.98.233.186.595.248 1.082.206.976-.084 1.857-.548 2.205-1.09.178-.275.247-.59.184-.91-.062-.315-.373-.715-.668-.977zm-7.767 7.161c1.501.825 2.71.73 3.551.41 2.065-.786 1.301-2.892.26-4.448-.328-.49-.757-.879-1.322-1.03-.566-.152-1.234-.057-2.017.354-.757.397-1.36.773-1.789 1.144-.426.367-.711.755-.774 1.18-.065.435.114.841.465 1.224.35.38.894.764 1.626 1.166z"></path><path d="M3 3a2 2 0 00-2 2v14a2 2 0 002 2h18a2 2 0 002-2V5a2 2 0 00-2-2H3zm0 2h18v14H3V5z"></path>
+                        </svg>Подарочные сертификаты</a>
+                </ul>
             </div>
         </nav>
+        <!--
         <main>
             <div class="grid-ad-panel"></div>
             <div class="new-literature"></div>
