Adding main slider and cards panel

--- a/index.html
+++ b/index.html
@@ -166,28 +166,78 @@
                     <a href="#">Распродажа</a>
                     <a href="#">Комиксы и манга</a>
                     <a id="nav-panel-chitay-school" href="#">
-                        <img src="/Chitay-Gorod/resources/flower_chitay.png" alt="flower_chitay" width="20" height="20">Читай-школа</a>
+                        <img src="/Chitay-Gorod/resources/flower_chitay.png" alt="flower_chitay" width="20"
+                            height="20">Читай-школа</a>
                     <a href="#">Что еще почитать?</a>
                     <a href="#">Читай-журнал</a>
                     <a id="nav-panel-sertificate-gifts" href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                            <path d="M12.448 7.166c.085-.16.215-.372.395-.568.18-.196.415-.382.711-.477.3-.097.643-.096 1.026.057.711.283 1.141.685 1.142 1.311 0 .294-.097.61-.261.946a7.623 7.623 0 01-.714 1.13c-.315.428-.635.671-.967.675-.336.002-.584-.24-.762-.516-.42-.659-.973-1.79-.57-2.558zM8.304 8.43c-.346.26-.618.617-.782 1.028-.576 1.439.517 2.116 1.86 2.333.357.057.729.05 1.019-.107a.865.865 0 00.363-.368 1.18 1.18 0 00.117-.58c-.022-.805-.312-1.642-.764-2.156-.227-.258-.508-.45-.83-.493-.327-.045-.663.066-.983.344zm10.528 1.593c-.439-.4-1.144-.553-1.72-.392-.755.21-1.255 1.448-1.34 2.183-.033.288.008.78.257.98.233.186.595.248 1.082.206.976-.084 1.857-.548 2.205-1.09.178-.275.247-.59.184-.91-.062-.315-.373-.715-.668-.977zm-7.767 7.161c1.501.825 2.71.73 3.551.41 2.065-.786 1.301-2.892.26-4.448-.328-.49-.757-.879-1.322-1.03-.566-.152-1.234-.057-2.017.354-.757.397-1.36.773-1.789 1.144-.426.367-.711.755-.774 1.18-.065.435.114.841.465 1.224.35.38.894.764 1.626 1.166z"></path><path d="M3 3a2 2 0 00-2 2v14a2 2 0 002 2h18a2 2 0 002-2V5a2 2 0 00-2-2H3zm0 2h18v14H3V5z"></path>
+                            <path
+                                d="M12.448 7.166c.085-.16.215-.372.395-.568.18-.196.415-.382.711-.477.3-.097.643-.096 1.026.057.711.283 1.141.685 1.142 1.311 0 .294-.097.61-.261.946a7.623 7.623 0 01-.714 1.13c-.315.428-.635.671-.967.675-.336.002-.584-.24-.762-.516-.42-.659-.973-1.79-.57-2.558zM8.304 8.43c-.346.26-.618.617-.782 1.028-.576 1.439.517 2.116 1.86 2.333.357.057.729.05 1.019-.107a.865.865 0 00.363-.368 1.18 1.18 0 00.117-.58c-.022-.805-.312-1.642-.764-2.156-.227-.258-.508-.45-.83-.493-.327-.045-.663.066-.983.344zm10.528 1.593c-.439-.4-1.144-.553-1.72-.392-.755.21-1.255 1.448-1.34 2.183-.033.288.008.78.257.98.233.186.595.248 1.082.206.976-.084 1.857-.548 2.205-1.09.178-.275.247-.59.184-.91-.062-.315-.373-.715-.668-.977zm-7.767 7.161c1.501.825 2.71.73 3.551.41 2.065-.786 1.301-2.892.26-4.448-.328-.49-.757-.879-1.322-1.03-.566-.152-1.234-.057-2.017.354-.757.397-1.36.773-1.789 1.144-.426.367-.711.755-.774 1.18-.065.435.114.841.465 1.224.35.38.894.764 1.626 1.166z">
+                            </path>
+                            <path d="M3 3a2 2 0 00-2 2v14a2 2 0 002 2h18a2 2 0 002-2V5a2 2 0 00-2-2H3zm0 2h18v14H3V5z">
+                            </path>
                         </svg>Подарочные сертификаты</a>
                 </ul>
             </div>
         </nav>
+        <div class="main-page-container">
+            <div class="main-ad-panel">
+                <div class="main-ad-panel-slider">
+                    <button class="main-ad-panel-slider-button-left">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="embla__button-icon">
+                            <path
+                                d="M14.707 6.293a1 1 0 010 1.414L10.414 12l4.293 4.293a1 1 0 01-1.414 1.414l-5-5a1 1 0 010-1.414l5-5a1 1 0 011.414 0z">
+                            </path>
+                        </svg>
+                    </button>
+                    <img width="1200" height="400" alt=""
+                        src="https://content.img-gorod.ru/content/main-banner/4116-imageWeb.png?width=1200&amp;height=400&amp;fit=bounds"
+                        srcset="https://content.img-gorod.ru/content/main-banner/4116-imageWeb.png?width=2400&amp;height=800&amp;fit=bounds 2x">
+                    <button class="main-ad-panel-slider-button-right">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="embla__button-icon">
+                            <path
+                                d="M9.293 6.293a1 1 0 000 1.414L13.586 12l-4.293 4.293a1 1 0 101.414 1.414l5-5a1 1 0 000-1.414l-5-5a1 1 0 00-1.414 0z">
+                            </path>
+                        </svg>
+                    </button>
+                </div>
+                <div class="main-ad-panel-cards">
+                    <div class="main-ad-panel-card-one">
+                        <div class="main-ad-panel-card-container">
+                            <div class="main-ad-panel-card-info-top">Внешность - не главное</div>
+                            <div class="main-ad-panel-card-info-bot">Если вы не книга</div>
+                        </div>
+                        <img src="https://cdn.img-gorod.ru/content/2024/07/26/72-72_1722015056658459793.svg" alt="Внешность – не главное">
+                    </div>
+                    <div class="main-ad-panel-card-two">
+                        <div class="main-ad-panel-card-container">
+                            <div class="main-ad-panel-card-info-top">Читай-город + Литрес</div>
+                            <div class="main-ad-panel-card-info-bot">Дарим скидку 30% на все книги обладателям подписки</div>
+                        </div>
+                        <img src="https://cdn.img-gorod.ru/content/2024/04/27/72-72-1_1714222041979387038.svg" alt="Читай-город + Литрес">
+                    </div>
+                    <div class="main-ad-panel-card-three">
+                        <div class="main-ad-panel-card-container">
+                            <div class="main-ad-panel-card-info-top">Эксклюзивно в &laquo;Читай-городе&raquo;</div>
+                            <div class="main-ad-panel-card-info-bot">Невозможно пропустить</div>
+                        </div>
+                        <img src="https://cdn.img-gorod.ru/content/2023/06/07/72-72_1686139576168796980.svg" alt="Эксклюзивно в «Читай-городе»"z>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!--
-        <main>
-            <div class="grid-ad-panel"></div>
+
             <div class="new-literature"></div>
             <div class="the-best-of-the-best"></div>
             <div class="exclusive-in-chitay-gorod"></div>
             <div class="coming-soon"></div>
-        </main>
+        </div>
         <footer>
         </footer>>
-    -->
-    </div>
+        </div>
+         -->
 </body>
 
 </html>
