Starting to make a product shelf of a new literature and a little improve previous css code

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <a href="#">Распродажа</a>
                     <a href="#">Комиксы и манга</a>
                     <a id="nav-panel-chitay-school" href="#">
-                        <img src="/Chitay-Gorod/resources/flower_chitay.png" alt="flower_chitay" width="20"
+                        <img src="resources\flower_chitay.png" alt="flower_chitay" width="20"
                             height="20">Читай-школа</a>
                     <a href="#">Что еще почитать?</a>
                     <a href="#">Читай-журнал</a>
@@ -226,10 +226,97 @@
                     </div>
                 </div>
             </div>
+            <div class="product-shelf-new-literature">
+                <div class="new-literature-header">
+                    <div class="new-literature-shelf-title-container">
+                        <a class="new-literature-shelf-title" href="#">Новинки литературы</a>
+                    </div>
+                    <a class="new-literature-shelf-all" href="#">
+                        <span>Смотреть все</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="card-slider__link-arrow">
+                            <path d="M6 11a1 1 0 100 2h9.586l-3.093 3.093a1 1 0 001.414 1.414l4.794-4.794a1.002 1.002 0 00.231-1.076.999.999 0 00-.225-.344l-4.8-4.8a1 1 0 10-1.414 1.414L15.586 11H6z"></path>
+                        </svg>
+                    </a>
+                </div>
+                <div class="new-literature-shelf-cards">
+                    <div class="new-literature-shelf-cards-container">
+                        <div class="new-literature-card-x-container">
+                            <div class="new-literature-card-one">
+                                <a>
+                                    <picture class="card-x-picture">
+                                        <img alt="Поднятие уровня в одиночку. Solo Leveling. Том 3: вебтун" width="200" height="280" src="https://content.img-gorod.ru/pim/products/images/7d/92/01905d18-5458-7ebf-b858-d0fe7d0c7d92.jpg?width=200&amp;height=280&amp;fit=bounds">
+                                    </picture>
+                                </a>
+                                <div class="card-x-price"></div>
+                                <div class="card-x-title"></div>
+                                <div class="card-x-rating"></div>
+                            </div>
+                        </div>
+                        <div class="new-literature-card-x-container">
+                            <div class="new-literature-card-two">
+                                <a>
+                                    <picture class="card-x-picture">
+                                    <img alt="Тирания веры" width="200" height="280" src="https://content.img-gorod.ru/pim/products/images/b1/77/018fa30c-8b48-7879-ae9f-2e5a0aefb177.jpg?width=200&amp;height=280&amp;fit=bounds">
+                                    </picture>
+                                </a>
+                                <div class="card-x-price"></div>
+                                <div class="card-x-title"></div>
+                                <div class="card-x-rating"></div>
+                            </div>
+                        </div>
+                        <div class="new-literature-card-x-container">
+                            <div class="new-literature-card-three">
+                                <a>
+                                    <picture class="card-x-picture">
+                                        <img alt="Стальная принцесса" width="200" height="280" src="https://content.img-gorod.ru/pim/products/images/31/19/019033e1-5270-7bc7-bc13-948591863119.jpg?width=200&amp;height=280&amp;fit=bounds">
+                                    </picture>
+                                </a>
+                                <div class="card-x-price"></div>
+                                <div class="card-x-title"></div>
+                                <div class="card-x-rating"></div>
+                            </div>
+                        </div>
+                        <div class="new-literature-card-x-container">
+                            <div class="new-literature-card-four">
+                                <a>
+                                    <picture class="card-x-picture">
+                                        <img alt="То, что растет" width="200" height="280" src="https://content.img-gorod.ru/pim/products/images/ab/6d/018faf4a-dd50-7fd3-8c4a-880e628aab6d.jpg?width=200&amp;height=280&amp;fit=bounds">
+                                    </picture>
+                                </a>
+                                <div class="card-x-price"></div>
+                                <div class="card-x-title"></div>
+                                <div class="card-x-rating"></div>
+                            </div>
+                        </div>
+                        <div class="new-literature-card-x-container">
+                            <div class="new-literature-card-five">
+                                <a>
+                                    <picture class="card-x-picture">
+                                        <img alt="Последнее приключение странника" width="200" height="280" src="https://content.img-gorod.ru/pim/products/images/4a/78/01902ebd-6630-78d4-9ec7-017ea9454a78.jpg?width=200&amp;height=280&amp;fit=bounds">
+                                    </picture>
+                                </a>
+                                <div class="card-x-price"></div>
+                                <div class="card-x-title"></div>
+                                <div class="card-x-rating"></div>
+                            </div>
+                        </div>
+                        <div class="new-literature-card-x-container">
+                            <div class="new-literature-card-six">
+                                <a>
+                                    <picture class="card-x-picture">
+                                        <img alt="Дом пламенных клятв (#3)" width="200" height="280" src="https://content.img-gorod.ru/pim/products/images/5c/8e/01901514-ae93-783e-adc6-f2a3f0115c8e.jpg?width=200&amp;height=280&amp;fit=bounds">
+                                    </picture>
+                                </a>
+                                <div class="card-x-price"></div>
+                                <div class="card-x-title"></div>
+                                <div class="card-x-rating"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <!--
-
-            <div class="new-literature"></div>
             <div class="the-best-of-the-best"></div>
             <div class="exclusive-in-chitay-gorod"></div>
             <div class="coming-soon"></div>
