--- a/index.html
+++ b/index.html
@@ -240,19 +240,43 @@
                 </div>
                 <div class="new-literature-shelf-cards">
                     <div class="new-literature-shelf-cards-container">
-                        <div class="new-literature-card-x-container">
+                        <div class="new-literature-cards-x-container">
                             <div class="new-literature-card-one">
                                 <a>
                                     <picture class="card-x-picture">
                                         <img alt="Поднятие уровня в одиночку. Solo Leveling. Том 3: вебтун" width="200" height="280" src="https://content.img-gorod.ru/pim/products/images/7d/92/01905d18-5458-7ebf-b858-d0fe7d0c7d92.jpg?width=200&amp;height=280&amp;fit=bounds">
                                     </picture>
+                                    <div class="card-x-badges">
+                                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" title="Новинка" svg-inline="" role="presentation" focusable="false" tabindex="-1">
+                                            <path d="M0 12C0 5.373 5.373 0 12 0s12 5.373 12 12-5.373 12-12 12S0 18.627 0 12z" fill="#37CEB4"></path><g clip-path="url(#clip0)"><path fill-rule="evenodd" clip-rule="evenodd" d="M9.856 5.967l5.061-.09a.178.178 0 01.163.256l-2.33 4.823a.178.178 0 00.164.256l2.998-.053a.178.178 0 01.132.3l-6.123 6.456a.177.177 0 01-.299-.173l1.191-4.113a.178.178 0 00-.174-.228l-2.333.042a.178.178 0 01-.177-.217l1.557-7.119a.178.178 0 01.17-.14z" fill="#fff"></path></g><defs><clipPath id="clip0"><path fill="#fff" transform="translate(6 6)" d="M0 0h12v12H0z"></path></clipPath></defs>
+                                        </svg>
+                                    </div>
                                 </a>
-                                <div class="card-x-price"></div>
-                                <div class="card-x-title"></div>
+                                <div class="card-x-price">
+                                    <div class="card-x-price-block">
+                                        <div class="old-price">
+                                            1 949 ₽
+                                            <svg viewBox="0 0 52 5" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M.88 3.938c16.403-3.917 33.836-3.917 50.238 0" stroke="#F34A57" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" vector-effect="non-scaling-stroke"></path>
+                                            </svg>
+                                        </div>
+                                        <div class="new-price">
+                                            1 624 ₽
+                                        </div>
+                                    </div>
+                                    <span class="card-x-price-sale">16%</span>
+                                </div>
+                                <div class="card-x-title">
+                                    <div class="card-x-title-container">
+                                        <div class="book-title">Поднятие уровня в одиночку. Solo Leveling. Том 3: вебтун</div>
+                                        <div class="book-author">Чхугон</div>
+                                    </div>
+                                </div>
                                 <div class="card-x-rating"></div>
+                                <div class="card-x-buttons"></div>
                             </div>
                         </div>
-                        <div class="new-literature-card-x-container">
+                        <div class="new-literature-cards-x-container">
                             <div class="new-literature-card-two">
                                 <a>
                                     <picture class="card-x-picture">
@@ -264,7 +288,7 @@
                                 <div class="card-x-rating"></div>
                             </div>
                         </div>
-                        <div class="new-literature-card-x-container">
+                        <div class="new-literature-cards-x-container">
                             <div class="new-literature-card-three">
                                 <a>
                                     <picture class="card-x-picture">
@@ -276,7 +300,7 @@
                                 <div class="card-x-rating"></div>
                             </div>
                         </div>
-                        <div class="new-literature-card-x-container">
+                        <div class="new-literature-cards-x-container">
                             <div class="new-literature-card-four">
                                 <a>
                                     <picture class="card-x-picture">
@@ -288,7 +312,7 @@
                                 <div class="card-x-rating"></div>
                             </div>
                         </div>
-                        <div class="new-literature-card-x-container">
+                        <div class="new-literature-cards-x-container">
                             <div class="new-literature-card-five">
                                 <a>
                                     <picture class="card-x-picture">
@@ -300,7 +324,7 @@
                                 <div class="card-x-rating"></div>
                             </div>
                         </div>
-                        <div class="new-literature-card-x-container">
+                        <div class="new-literature-cards-x-container">
                             <div class="new-literature-card-six">
                                 <a>
                                     <picture class="card-x-picture">
