--- a/index.html
+++ b/index.html
@@ -1030,10 +1030,117 @@
             </div>
         </div>
     </div>
-    <!--
-        <footer>
-        </footer>
-    -->
+    <footer>
+        <div class="footer-container">
+            <div class="footer-container-div-left">
+                <div class="footer-container-title">Книжный интернет-магазин «Читай-город»</div>
+                <p class="footer-container-text">«Читай-город» – сеть книжных магазинов, успешно работающих в Москве и
+                    других регионах России.</p>
+                <p class="footer-container-text">А ещё это – крупный интернет-магазин книг. В нём вы можете заказывать
+                    книги в любое время 24 часа в сутки.</p>
+                <p class="footer-container-text">На информационном ресурсе применяются <br><u>рекомендательные
+                        технологии</u>.</p>
+                <div class="footer-container-social-media">
+                    <a class="media-link">
+                        <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M20.576 7.738c.134-.416 0-.72-.59-.72h-1.964c-.496 0-.724.266-.858.55 0 0-1.01 2.422-2.421 3.993-.457.454-.667.606-.915.606-.133 0-.305-.152-.305-.568v-3.88c0-.492-.152-.719-.572-.719H9.863c-.305 0-.496.227-.496.454 0 .473.705.587.782 1.912v2.877c0 .624-.115.738-.362.738-.668 0-2.288-2.442-3.26-5.224C6.337 7.208 6.145 7 5.65 7H3.667C3.095 7 3 7.265 3 7.549c0 .51.667 3.085 3.107 6.491 1.62 2.328 3.927 3.577 6.005 3.577 1.258 0 1.411-.283 1.411-.757V15.1c0-.567.114-.662.515-.662.286 0 .8.151 1.963 1.268 1.335 1.325 1.563 1.93 2.307 1.93h1.963c.572 0 .84-.284.687-.832-.172-.55-.82-1.344-1.659-2.29-.457-.53-1.144-1.117-1.353-1.4-.286-.38-.21-.53 0-.872-.02 0 2.383-3.368 2.63-4.504z">
+                            </path>
+                        </svg>
+                    </a>
+                    <a class="media-link">
+                        <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M15.508 12.658c.65-.401 1.507-.21 1.915.428a1.345 1.345 0 01-.436 1.876 8.964 8.964 0 01-2.752 1.118l2.65 2.597a1.34 1.34 0 010 1.924 1.407 1.407 0 01-1.963 0l-2.604-2.552-2.603 2.552a1.4 1.4 0 01-.982.399 1.4 1.4 0 01-.981-.399 1.342 1.342 0 010-1.924L10.4 16.08a8.98 8.98 0 01-2.751-1.118 1.345 1.345 0 01-.435-1.876 1.403 1.403 0 011.914-.428 6.12 6.12 0 006.38 0zM12.318 3c2.614 0 4.74 2.084 4.74 4.646 0 2.561-2.126 4.644-4.74 4.644-2.613 0-4.739-2.083-4.739-4.644C7.579 5.084 9.705 3 12.319 3zm0 2.723c-1.081 0-1.962.862-1.962 1.923 0 1.06.881 1.923 1.962 1.923 1.082 0 1.963-.863 1.963-1.923s-.88-1.923-1.963-1.923z">
+                            </path>
+                        </svg>
+                    </a>
+                    <a class="media-link">
+                        <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M19.043 6.386a2.255 2.255 0 011.586 1.586c.386 1.409.37 4.344.37 4.344s0 2.921-.37 4.33a2.255 2.255 0 01-1.586 1.586c-1.409.37-7.043.37-7.043.37s-5.62 0-7.043-.385a2.255 2.255 0 01-1.586-1.586C3 15.237 3 12.3 3 12.3s0-2.92.37-4.329a2.302 2.302 0 011.587-1.601C6.366 6 12 6 12 6s5.634 0 7.043.386zm-8.837 3.218V15l4.685-2.699-4.685-2.698z">
+                            </path>
+                        </svg>
+                    </a>
+                    <a class="media-link">
+                        <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M19.002 8.136a4.401 4.401 0 01-2.6-.84 4.164 4.164 0 01-1.636-2.514A4.01 4.01 0 0114.682 4h-2.79v7.37l-.003 4.037c0 1.079-.729 1.993-1.734 2.316a2.597 2.597 0 01-2.092-.223 2.423 2.423 0 01-1.233-2.058c-.02-1.364 1.12-2.478 2.53-2.478.277 0 .544.045.795.122V10.353a5.519 5.519 0 00-.806-.058c-1.543 0-2.987.62-4.02 1.738a4.988 4.988 0 00-1.319 3.054c-.093 1.483.468 2.895 1.557 3.935.16.152.328.294.505.427a5.465 5.465 0 003.277 1.073c.271 0 .542-.02.806-.059a5.407 5.407 0 002.977-1.44 4.968 4.968 0 001.567-3.594l-.014-6.03a7.236 7.236 0 004.324 1.419V8.133c.003.003-.007.003-.007.003z">
+                            </path>
+                        </svg>
+                    </a>
+                    <a class="media-link">
+                        <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M4.237 11.422c4.832-2.105 8.054-3.493 9.666-4.164 4.603-1.914 5.56-2.247 6.183-2.258.137-.002.444.032.642.193.168.136.214.32.236.449.022.129.05.423.028.652-.25 2.621-1.329 8.981-1.878 11.916-.232 1.242-.69 1.659-1.133 1.7-.962.088-1.693-.636-2.625-1.247-1.459-.957-2.283-1.552-3.7-2.485-1.636-1.079-.575-1.671.358-2.64.244-.253 4.485-4.11 4.567-4.46.01-.044.02-.208-.077-.294s-.24-.056-.343-.033c-.147.033-2.477 1.574-6.992 4.621-.661.454-1.26.675-1.797.664-.592-.013-1.73-.335-2.577-.61-1.038-.337-1.862-.515-1.79-1.089.037-.298.448-.603 1.232-.915z">
+                            </path>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+            <div class="footer-container-div-center">
+                <div class="footer-container-title">В наших магазинах</div>
+                <a href="#" class="footer-link">Адреса магазинов</a>
+                <a href="#" class="footer-link">Услуги</a>
+                <a href="#" class="footer-link">Наши партнёры</a>
+                <a href="#" class="footer-link">О компании</a>
+                <a href="#" class="footer-link">Хотите у нас работать?</a>
+            </div>
+            <div class="footer-container-div-right">
+                <div class="footer-container-title">В интернет-магазине</div>
+                <a href="#" class="footer-link">Доставка и оплата</a>
+                <a href="#" class="footer-link">Бонусная программа</a>
+                <a href="#" class="footer-link">Вопросы и ответы</a>
+                <a href="#" class="footer-link">Обратная связь</a>
+                <a href="#" class="footer-link">Акции</a>
+                <a href="#" class="footer-link">Книжный Дозор</a>
+            </div>
+            <div class="footer-container-div-bottom">
+                <hr class="footer-bottom-line">
+                <div class="copyright">© 2024, Читай-город</div>
+                <a class="footer-bottom-link">Правила продажи</a>
+                <a class="footer-bottom-link">Политика конфиденциальности</a>
+                <div class="footer-payment">
+                    <p class="footer-bottom-text">Принимаем к оплате</p>
+                    <div class="payment-system">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="34" height="14" viewBox="0 0 34 14" class="payment-method">
+                            <path fill="#9CA5B6"
+                                d="M9.26 2.254V2.25h2.988v9.5H9.261V6.112h-.249L7.27 11.75H5.195L3.453 6.108h-.25v5.642H.218v-9.5h2.987s1.31-.004 1.66 1.244a1020.76 1020.76 0 001.244 4.398h.249c.025-.087.925-3.248 1.244-4.393.348-1.247 1.65-1.245 1.66-1.245zm9.625.991c.41-.916 1.286-.995 1.286-.995h2.821v9.5h-2.987V6.108h-.249l-2.074 4.647c-.41.912-1.328.995-1.328.995h-2.82v-9.5h2.986v5.642h.25l2.115-4.647zm5.435 3.319v5.186h2.987V8.722h3.236c1.41 0 2.606-.9 3.05-2.158H24.32zm-.416-4.314h6.642a3.235 3.235 0 013.236 3.236c0 .228-.02.448-.066.664h-5.12a4.773 4.773 0 01-4.692-3.9z">
+                            </path>
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="14" viewBox="0 0 32 14" class="payment-method">
+                            <path fill="#9CA5B6"
+                                d="M16.524 5.22c-.017 1.375 1.226 2.143 2.162 2.599.962.468 1.285.768 1.282 1.187-.008.64-.768.923-1.479.934-1.241.02-1.963-.335-2.536-.603l-.447 2.092c.575.265 1.64.497 2.746.507 2.594 0 4.292-1.28 4.3-3.266.01-2.52-3.485-2.66-3.46-3.786.007-.341.333-.706 1.047-.798.354-.047 1.33-.083 2.436.426l.434-2.024a6.62 6.62 0 00-2.311-.424c-2.442 0-4.16 1.298-4.174 3.156zm10.657-2.98c-.474 0-.873.276-1.051.7l-3.706 8.848h2.593l.515-1.426H28.7l.3 1.426h2.284L29.29 2.24h-2.109zm.363 2.58l.748 3.585h-2.05l1.302-3.586zM13.382 2.24l-2.044 9.548h2.47l2.043-9.548h-2.47zm-3.655 0L7.156 8.738l-1.04-5.526c-.122-.617-.604-.973-1.14-.973H.775l-.06.277c.864.187 1.844.49 2.438.812.363.198.467.37.587.84l1.97 7.62h2.61l4.002-9.55H9.727z">
+                            </path>
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="14" viewBox="0 0 20 14"
+                            class="master-card">
+                            <g fill="#9CA5B6" clip-path="url(#a)">
+                                <path
+                                    d="M20 7a6.181 6.181 0 01-10 4.86 6.183 6.183 0 01-9.059-1.581A6.18 6.18 0 0110 2.14a6.18 6.18 0 0110 4.858V7zm-.593 3.63v.199h-.036v-.2h-.088v-.04h.204v.04h-.08zm.396-.041v.24l-.036.002v-.182l-.067.156h-.046l-.067-.156v.18h-.045v-.24h.055l.072.171.073-.171h.061z">
+                                </path>
+                            </g>
+                            <defs>
+                                <clipPath id="a">
+                                    <path fill="#fff" d="M0 0h20v14H0z"></path>
+                                </clipPath>
+                            </defs>
+                        </svg>
+                    </div>
+                </div>
+                <div class="footer-download">
+                    <div class="footer-download-button-container">
+                        <button class="footer-download-button">
+                            Скачать приложение
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+                                <path d="M9.293 6.293a1 1 0 000 1.414L13.586 12l-4.293 4.293a1 1 0 101.414 1.414l5-5a1 1 0 000-1.414l-5-5a1 1 0 00-1.414 0z"></path>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
